--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
-  text-align: center;
+.header{
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+align-items: center;
+padding: 0 25px;
+box-shadow: 0px 15px 10px -15px blue;
+}
+.col a.logo {
+    text-decoration: none;
+    font-size: 20px;
+    text-transform: uppercase;
+    color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.col a.login{
+    margin-left: 15px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: black;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.col a.login:hover{
+    text-decoration: underline;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.col a.logo:hover{
+    text-decoration: underline;
+
+}
+.main{
+    min-height: calc(100vh - 70px);
+}
+.footer{
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
 }
 
-.App-link {
-  color: #61dafb;
+.slider {
+    display: flex;
+    padding-top: 10px;
+}
+.left{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.title{
+    font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    text-shadow: 0 0 4px black ;
+}
+.right{
+    display:flex;
+    justify-content: center;
+    align-items:center
+}
+.big-title{
+    text-align: center;
+    margin-bottom: 90px;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content{
+
+    margin: 150px 0;
+}
+.content-groups{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    gap:40px ;
+    align-items: center;
+}
+.card{
+    width: 250px;
+    height: 300px;
+    
+}
+.card-body{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
+}
+.img-cars{
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    filter: drop-shadow(0 0 13px #111111);
+}
+.card-footer{
+    height: 60%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.car-title{
+    text-transform: uppercase;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+
+.per-day{
+    margin-bottom: 20px;
+}
+.bold-price{
+ font-weight: bold;
+}
+
+.rent-now{
+    padding: 5px 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 3px #000000;
+    color: #000000;
+    cursor:pointer;
+    transition: all 0.5s;
+    border: none;
+}
+.rent-now:hover{
+    background-color: #000000;
+    color: #ffffff;
+}
+.rent-link{
+    color: #000000;
+text-decoration: none;
+}
+
+.rent-now:hover .rent-link{
+    color:#ffffff
 }
