--- a/src/App.css
+++ b/src/App.css
@@ -1,143 +1,366 @@
-.header{
-    height: 50px;
+.header {
+    height: 80px;
     display: flex;
     justify-content: space-between;
-align-items: center;
-padding: 0 25px;
-box-shadow: 0px 15px 10px -15px blue;
-}
-.col a.logo {
-    text-decoration: none;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: black;
+    align-items: center;
+    padding: 0 15px;
+    box-shadow: 0px 15px 10px -15px #111111;
 }
 
-.col a.login{
+.col a.logo {
+    text-decoration: none;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #000000;
+}
+
+.col a.login {
     margin-left: 15px;
     text-decoration: none;
     text-transform: uppercase;
-    color: black;
-
+    color: #000000;
+    font-weight: bold;
 }
 
-.col a.login:hover{
+.col a.login:hover {
     text-decoration: underline;
-
 }
 
-.col a.logo:hover{
-    text-decoration: underline;
+.name {
+    text-transform: uppercase;
+    font-weight: bold;
+}
 
+.main {
+    min-height: calc(100vh - 80px);
 }
-.main{
-    min-height: calc(100vh - 70px);
-}
-.footer{
-    height: 25px;
+
+.footer {
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-   
 }
 
 .slider {
     display: flex;
-    padding-top: 10px;
 }
-.left{
+
+.left {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.title{
-    font-size: 30px;
+
+.title {
+    font-size: 40px;
     text-transform: uppercase;
     text-align: center;
-    text-shadow: 0 0 4px black ;
+    text-shadow: 0 0 4px #000000;
 }
-.right{
-    display:flex;
+
+.right {
+    display: flex;
     justify-content: center;
-    align-items:center
+    align-items: center;
 }
-.big-title{
+
+.content {
+    margin: 100px 0;
+}
+
+.big-title {
     text-align: center;
-    margin-bottom: 90px;
+    margin-bottom: 40px;
     text-transform: uppercase;
     font-weight: bold;
 }
 
-.content{
-
-    margin: 150px 0;
-}
-.content-groups{
+.content-groups {
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
+    gap: 40px;
     justify-content: center;
-    gap:40px ;
     align-items: center;
 }
-.card{
+
+.card {
     width: 250px;
     height: 300px;
-    
 }
-.card-body{
+
+.card-body {
     width: 100%;
     height: 50%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    align-items: center
 }
-.img-cars{
-    width: 100%;
-    display: block;
-    margin: 0 auto;
-    filter: drop-shadow(0 0 13px #111111);
-}
-.card-footer{
-    height: 60%;
+
+.card-footer {
+    height: 50%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.car-title{
-    text-transform: uppercase;
+
+.img-cars {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    filter: drop-shadow(0 0 13px #111111);
+}
+
+.car-title {
     margin-bottom: 5px;
+    text-transform: uppercase;
     font-weight: bold;
 }
 
-
-.per-day{
+.per-day {
     margin-bottom: 20px;
 }
-.bold-price{
- font-weight: bold;
+
+.bold-price {
+    font-weight: bold;
 }
 
-.rent-now{
+.rent-now {
     padding: 5px 15px;
     background-color: #ffffff;
     box-shadow: 0 0 3px #000000;
     color: #000000;
-    cursor:pointer;
+    cursor: pointer;
     transition: all 0.5s;
     border: none;
 }
-.rent-now:hover{
+.pay{
+    padding: 5px 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 3px #000000;
+    color: #000000;
+    cursor: pointer;
+    transition: all 0.5s;
+    border: none;
+    margin-top: 20px;
+}
+.pay:hover{
     background-color: #000000;
     color: #ffffff;
 }
-.rent-link{
-    color: #000000;
-text-decoration: none;
+
+.rent-now:hover {
+    background-color: #000000;
+    color: #ffffff;
 }
 
-.rent-now:hover .rent-link{
-    color:#ffffff
+.rent-link {
+    color: #000000;
+    text-decoration: none;
+}
+
+.rent-now:hover .rent-link {
+    color: #ffffff;
+}
+
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-title {
+    font-size: 40px;
+    text-transform: uppercase;
+    text-shadow: 0 0 2px #111111;
+}
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: calc(100vh - 80px);
+}
+
+.form-groups {
+    width: 300px;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-title {
+    font-size: 30px;
+    margin-bottom: 30px;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: 0 0 3px #000000;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 10px 5px;
+}
+
+.input {
+    width: 100%;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #111111;
+}
+
+.rent-now {
+    display: block;
+    margin: 0 auto;
+    width: max-content;
+}
+
+.form-link {
+    font-weight: bold;
+    text-decoration: none;
+    color: #000000;
+}
+
+.form-link:hover {
+    text-decoration: underline;
+}
+
+
+
+.car-rentTitle {
+    text-align: center;
+    margin: 100px 0 100px 0;
+    font-size: 40px;
+}
+
+.car-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.car-col {
+    flex: 1;
+    margin-bottom: 100px;
+}
+
+.car-group {
+    margin-bottom: 25px;
+}
+
+.car-subtitle {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    color: #afafaf;
+}
+
+.car-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.car-info span {
+    margin-bottom: 5px;
+    font-size: 40px;
+}
+
+.car-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.car-img {
+    width: 600px;
+    height: auto;
+    filter: drop-shadow(0 0 5px #111111);
+}
+
+.driver {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.driver input {
+    width: 30px;
+    height: 30px;
+}
+
+.driver label {
+    margin-left: 5px;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+.total {
+    margin-top: 25px;
+}
+
+.totalTitle {
+    font-size: 50px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.content-flex {
+    display: flex;
+    padding: 0 10px;
+}
+
+
+
+
+
+
+
+.btn-type {
+    padding: 5px 15px;
+    background-color: #ffffff;
+    box-shadow: 0 0 4px #000000;
+    border: none;
+    margin-right: 5px;
+    cursor: pointer;
+    transition: all 0.5s;
+    text-align: center;
+}
+
+.btn-type:hover {
+    background-color: #afafaf;
+}
+
+.search {
+    height: 30px;
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 0 15px;
+    color: #afafaf;
+    border-bottom: 1px solid #afafaf;
+}
+.payment{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.box{
+    font-size: 40px;
 }
